# streaming-asr-conformer-librispeech

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
_autopilot/: project_plan.json  readme_last_message.txt  run_summary.json  scaffold_last_message.txt
configs/: openslr_full.yaml  smoke.yaml
results/: results.json
scripts/: bootstrap_venv.sh
src/streaming_asr/augment/: musan_rir.py  specaugment.py
src/streaming_asr/cli/: common.py  data.py  eval.py  report.py  train.py
src/streaming_asr/data/: dataset.py  features.py  manifests.py  openslr.py  splits.py  synthetic.py  tokenizer.py
src/streaming_asr/decoding/: ctc_beam.py  ctc_greedy.py
src/streaming_asr/eval/: evaluator.py
src/streaming_asr/models/: chunkwise.py  conformer.py  deepspeech2.py  factory.py
src/streaming_asr/train/: trainer.py
src/streaming_asr/utils/: config.py  download.py  io.py  logging.py  metrics.py  repro.py  run.py  text.py
src/streaming_asr_conformer_librispeech.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
